# hangar

./: .dockerignore  .gitignore  CHANGELOG.md  README.md
.pipeline/: README.md  batch.sh  build-order.txt  hangar-test-context.md  parallel.sh  pipeline.sh  smoke.sh  wave.sh
backend/: Cargo.toml
backend/hangard/: Cargo.toml
backend/hangard/src/: main.rs  pty.rs  session.rs
backend/hangard/src/api/: mod.rs
backend/hangard/src/ws/: mod.rs
backend/migrations/: 001_initial.sql  002_session_state_and_kind_migration.sql  003_add_sandbox.sql  003_fts5_search.sql
backend/src/: cc_hook_socket.rs  config.rs  db.rs  events.rs  lib.rs  main.rs  pty.rs  push.rs  raw_fd_master.rs  ringbuf.rs  session.rs  supervisor_client.rs  supervisor_protocol.rs  util.rs
backend/src/api/: broadcast.rs  costs.rs  events.rs  health.rs  host_metrics.rs  key.rs  logs.rs  metrics.rs  mod.rs  output.rs  pipeline.rs  prompt.rs  resize.rs  rollup.rs  search.rs  sessions.rs  worktree.rs
backend/src/drivers/: claude_code.rs  codex.rs  mod.rs  raw_bytes.rs  shell.rs
backend/src/logs/: file.rs  journalctl.rs  mod.rs  ringbuf_source.rs
backend/src/sandbox/: manager.rs  mod.rs  types.rs
backend/src/session/: mod.rs
backend/src/supervisor/: child.rs  fd_pass.rs  mod.rs  protocol.rs
backend/src/ws/: logs.rs  mod.rs  pty.rs
backend/tests/: api_costs.rs  api_e2e_test.rs  claude_code_driver_test.rs  cli_flags_test.rs  codex_driver_test.rs  delete_race_test.rs  delete_reap_test.rs  event_fk_drop_test.rs  integration_test.rs  push_integration.rs  ringbuf_test.rs  rollup_endpoints_test.rs  scraper_trim_test.rs  supervisor_integration.rs  supervisor_restart.rs  supervisor_test.rs
backend/tests/fixtures/cc_transcripts/: context_window_50pct.expected.json  context_window_50pct.txt  context_window_95pct.expected.json  context_window_95pct.txt  error_api_error.expected.json  error_api_error.txt  error_rate_limit.txt  model_line_opus.expected.json  model_line_opus.txt  model_line_sonnet.expected.json  model_line_sonnet.txt  model_line_with_ansi.txt  partial_ansi_sequence.expected.json  partial_ansi_sequence.txt  permission_denied.txt  permission_simple.expected.json  permission_simple.txt  permission_tool_use.expected.json  permission_tool_use.txt  thinking_visible.expected.json  thinking_visible.txt  thinking_with_tools.expected.json  thinking_with_tools.txt  tool_bash_command.expected.json  tool_bash_command.txt  tool_edit_file.expected.json  tool_edit_file.txt  tool_multiple_sequential.expected.json  tool_multiple_sequential.txt  tool_read_file.expected.json  tool_read_file.txt  turn_multi_tool.expected.json  turn_multi_tool.txt  turn_simple_qa.expected.json  turn_simple_qa.txt
caddy/: Caddyfile
docs/: ARCHITECTURE.md  PHASES.md  ROADMAP.md  RUNBOOK.md  SESSION-PROTOCOL.md  api.yaml  architecture.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  vitest.config.ts
scripts/: deploy.sh  (+1 more)
(+147 files in other folders)
