[workspace]
members = [".", ]
resolver = "2"

[package]
name = "hangard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hangard"
path = "src/main.rs"

[[bin]]
name = "hangar-supervisor"
path = "src/bin/hangar-supervisor.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "migrate"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
ulid = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
dirs = "5"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
portable-pty = "0.8"
regex = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tokio-util = { version = "0.7", features = ["codec"] }
nix = { version = "0.29", features = ["socket", "process", "signal", "term", "uio"] }
libc = "0.2"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
toml = "0.8"
notify = "6"
sysinfo = "0.32"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
