[package]
name = "hangard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hangard"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
futures = "0.3"
